--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     height: 100vh;
     width: 100vw;
-    margin: 0;
-    padding: 0;
 }
 
 #navBar {
@@ -12,6 +15,11 @@ body {
     align-items: center;
     justify-content: space-evenly;
     box-shadow: 0 2px 2px black;
+}
+
+#navBar a {
+    color: black;
+    text-decoration: none;
 }
 
 .navBar__button {
@@ -27,4 +35,5 @@ body {
 #content {
     height: 90%;
     overflow: scroll;
+    padding: 20px;
 }
