--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href={% static 'main.css' %} rel='stylesheet'>
-        <link href={% block stylesheet %}{% endblock %} rel='stylesheet'>
+        {% block stylesheet %}{% endblock stylesheet %}
         <title>{% block page_title %}Django Tweets{% endblock  %}</title>
     </head>
     <body>
