--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -26,6 +27,7 @@ body {
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
+    background-color: lightgray;
 }
 
 .navBar__button:hover {
