--- a/static/register.css
+++ b/static/register.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -16,6 +17,7 @@
 }
 #register__container form p input {
     width: 100%;
+    padding: 5px;
 }
 
 #register__button {
@@ -26,8 +28,23 @@
 }
 
 #register__button button {
-    width: 100%;
+    width: 80%;
     padding: 5px;
     margin-top: 5px;
     border-radius: 5px;
+}
+
+#register__login {
+    margin-top: 10px;
+}
+
+#register__login a {
+    color: black;
+}
+
+#register__container form #register__error {
+    margin-top: 5px;
+    width: 100%;
+    text-align: center;
+    color: red;
 }
