--- a/static/login.css
+++ b/static/login.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     padding: 50px;
-    border: 1px solid black;
+    border: 2px solid var(--grey);
     border-radius: 10px;
     margin: 10px 0 10px 0;
 }
@@ -31,10 +31,13 @@
     margin-top: 5px;
     width: 80%;
     border-radius: 5px;
+    border: 5px solid var(--scarlet);
+    background-color: white;
+    color: var(--scarlet);
 }
 
 #login__register a {
-    color: black;
+    color: var(--scarlet);
 }
 
 #login__error {
