--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+:root {
+    --scarlet: rgb(187, 0, 0);
+    --grey: rgb(102, 102, 102);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Space Mono', monospace;
 }
 
 body {
@@ -15,27 +23,31 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    box-shadow: 0 2px 2px black;
+    background-color: var(--scarlet);
 }
 
 #navBar a {
-    color: black;
+    color: var(--grey);
     text-decoration: none;
+    font-size: 30px;
 }
 
 .navBar__button {
-    border: 1px solid black;
-    border-radius: 10px;
+    height: 100%;
     padding: 10px;
-    background-color: lightgray;
+    background-color: var(--scarlet);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navBar__button:hover {
     cursor: pointer;
+    border-bottom: 6px solid var(--grey);
+    padding-bottom: 4px;
 }
 
 #content {
     height: 90%;
     overflow: scroll;
-    padding: 20px;
 }
