--- a/templates/base.html
+++ b/templates/base.html
@@ -5,28 +5,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href={% static 'main.css' %} rel='stylesheet'>
-        {% block stylesheet %}{% endblock stylesheet %}
+        {% block stylesheet %}Inherited stylsheets...{% endblock stylesheet %}
+        <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
         <title>{% block page_title %}Django Tweets: Home{% endblock  %}</title>
     </head>
     <body>
         <div id='navBar'>
             {% block navBar %}
-                <div class='navBar__button'>
-                    <a href={% url 'homepage' %}>
-                    Home
-                    </a>
-                </div>
-                <div class='navBar__button'>
-                    <a href={% url 'user_detail' user.username %}>
-                        Profile
-                    </a>
-                </div>
-                <div class='navBar__button'>Notifications</div>
-                <div class='navBar__button'>
-                    <a href={% url 'logout' %}>
-                        Logout
-                    </a>
-                </div>
+                {% include './std_navbar.html' %}
             {% endblock  %}
         </div>
         <div id='content'>
