--- a/static/homepage.css
+++ b/static/homepage.css
@@ -15,10 +15,11 @@
 #homepage__sidebar {
     height: 50%;
     width: 100%;
-    box-shadow: 0 2px 5px var(--grey);
+    box-shadow: 0 0px 7px black;
     background-color: white;
     border-radius: 10px;
     padding: 0 10px 0 10px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,22 +67,25 @@
     height: 100%;
     overflow: scroll;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
+    flex-flow: wrap;
     background-color: var(--grey);
 }
 
 .homepage__tweetContainer {
     width: 80%;
-    height: 20%;
+    height: 30%;
     margin-top: 10px;
     padding: 10px;
     border-radius: 10px;
     background-color: white;
+    box-shadow: 0 0 7px black;
 }
 
 .homepage__tweetName {
     width: 100%;
+    height: 30%;
     border-bottom: 2px solid var(--scarlet);
     padding: 0 0 5px 5px;
     height: 25%;
@@ -90,6 +94,7 @@
 .homepage__tweetName a {
     color: black;
     text-decoration: none;
+    font-size: 20px;
 }
 
 .homepage__tweetName i {
@@ -99,6 +104,12 @@
 .homepage__tweetContent {
     display: flex;
     align-items: center;
-    height: 75%;
+    height: 55%;
+    padding: 0 5px;
+    border-bottom: 1px solid var(--grey);
+}
+
+.homepage__tweetDate {
     padding-left: 5px;
+    color: var(--scarlet);
 }
