--- a/static/user_detail.css
+++ b/static/user_detail.css
@@ -1,3 +1,9 @@
+#userDetail__page {
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
 #userDetail__sidebar {
     width: 30%;
     height: 100%;
@@ -6,7 +12,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 20px 0 20px 0;
+    padding: 20px 0px 20px 0;
+    overflow: scroll;
 }
 
 #userDetail__displayName {
@@ -19,10 +26,16 @@
     color: white;
 }
 
+#userDetail__bio {
+    width: 60%;
+    text-align: center;
+}
+
 #userDetail__infoContainer {
     width: 50%;
     height: 40%;
     background-color: white;
+    box-shadow: 0 0 7px black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -38,4 +51,54 @@
     border: 2px solid var(--scarlet);
     background-color: white;
     color: var(--grey);
+}
+
+#userDetail__mainContainer {
+    width: 70%;
+    height: 100%;
+    overflow: scroll;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-flow: wrap;
+    background-color: var(--grey);
+}
+
+.userDetail__tweetContainer {
+    width: 80%;
+    height: 30%;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 0 7px black;
+}
+
+.userDetail__tweetName {
+    width: 100%;
+    height: 30%;
+    border-bottom: 2px solid var(--scarlet);
+    padding: 0 0 5px 5px;
+    height: 25%;
+}
+
+.userDetail__tweetName strong {
+    font-size: 20px;
+}
+
+.userDetail__tweetName i {
+    color: var(--grey);
+}
+
+.userDetail__tweetContent {
+    display: flex;
+    align-items: center;
+    height: 55%;
+    padding-left: 0 5px;
+    border-bottom: 1px solid var(--grey);
+}
+
+.userDetail__tweetDate {
+    padding-left: 5px;
+    color: var(--scarlet);
 }
