Delete stylesheet text

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href={% static 'main.css' %} rel='stylesheet'>
-        {% block stylesheet %}Inherited stylsheets...{% endblock stylesheet %}
+        {% block stylesheet %}{% endblock stylesheet %}
         <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
         <title>{% block page_title %}Django Tweets: Home{% endblock  %}</title>
