--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -10,16 +10,7 @@
 {% endblock page_title %}
 
 {% block navBar %}
-    <div class='navBar__button'>
-        <a href={% url 'homepage' %}>
-            <ion-icon name="home"></ion-icon>
-        </a>
-    </div>
-    <div class='navBar__button'>
-        <a href={% url 'register' %}>
-            <ion-icon name="person-add"></ion-icon>
-        </a>
-    </div>
+    {% include '../login_navbar.html' %}
 {% endblock navBar %}
 
 {% block content %}
