--- a/templates/std_navbar.html
+++ b/templates/std_navbar.html
@@ -9,7 +9,9 @@
     </a>
 </div>
 <div class='navBar__button'>
-    <ion-icon name="notifications"></ion-icon>
+    <a href={% url 'notifications' %}>
+        <ion-icon name="notifications"></ion-icon>
+    </a>
 </div>
 <div class='navBar__button'>
     <a href={% url 'logout' %}>
