Modify navBar rendering based on new notification existance

--- a/templates/tweet/homepage.html
+++ b/templates/tweet/homepage.html
@@ -5,6 +5,14 @@
     <link href={% static 'homepage.css' %} rel='stylesheet'>
 {% endblock stylesheet %}
 
+{% block navBar %}
+    {% if new_notifications %}
+        {% include '../new_notify_navbar.html' %}
+    {% else %}
+        {% include '../std_navbar.html' %}
+    {% endif %}
+{% endblock navBar %}
+    
 {% block content %}
     <div id='homepage__container'>
         {% include './homepage_sidebar.html' %}
