Accurately show how many accounts the user is following

--- a/templates/twitteruser/user_detail_sidebar.html
+++ b/templates/twitteruser/user_detail_sidebar.html
@@ -10,7 +10,7 @@
     </div>
     <div id='userDetail__infoContainer'>
         <div id='userDetail__following'>
-            <strong>Following: </strong> {{ user.following.count }}
+            <strong>Following: </strong> {{ follow_count }}
         </div>
         <div id='userDetail__totalTweets'>
             <strong>Tweets: </strong> {{ tweets.count }}
