--- a/static/homepage.css
+++ b/static/homepage.css
@@ -83,6 +83,11 @@
     box-shadow: 0 0 7px black;
 }
 
+.homepage__tweetContainer a {
+    color: black;
+    text-decoration: none;
+}
+
 .homepage__tweetName {
     width: 100%;
     height: 30%;
