--- a/static/user_detail.css
+++ b/static/user_detail.css
@@ -74,6 +74,11 @@
     box-shadow: 0 0 7px black;
 }
 
+.userDetail__tweetContainer a {
+    color: black;
+    text-decoration: underline;
+}
+
 .userDetail__tweetName {
     width: 100%;
     height: 30%;
